--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,65 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!--Spring Security-->
+        <dependency>
+                 <groupId>org.springframework.boot</groupId>
+                 <artifactId>spring-boot-starter-security</artifactId>
+               </dependency>
+           <dependency>
+             <groupId>org.springframework.security</groupId>
+             <artifactId>spring-security-test</artifactId>
+             <scope>test</scope>
+           </dependency>
+        <!--JWT-->
+           <dependency>
+             <groupId>io.jsonwebtoken</groupId>
+             <artifactId>jjwt-api</artifactId>
+             <version>0.11.0</version>
+           </dependency>
+           <dependency>
+             <groupId>io.jsonwebtoken</groupId>
+             <artifactId>jjwt-impl</artifactId>
+             <version>0.11.0</version>
+             <scope>runtime</scope>
+           </dependency>
+           <dependency>
+             <groupId>io.jsonwebtoken</groupId>
+             <artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
+             <version>0.11.0</version>
+             <scope>runtime</scope>
+           </dependency>
+           <!--解决生成JWT时base64加密错误-->
+           <dependency>
+             <groupId>com.google.guava</groupId>
+             <artifactId>guava</artifactId>
+             <version>31.0.1-jre</version>
+           </dependency>
+        <!--mybatis-plus-->
+           <dependency>
+             <groupId>com.baomidou</groupId>
+             <artifactId>mybatis-plus-boot-starter</artifactId>
+             <version>3.5.1</version>
+           </dependency>
+           <!--mybatis-plus代码生成器-->
+           <dependency>
+             <groupId>com.baomidou</groupId>
+             <artifactId>mybatis-plus-generator</artifactId>
+             <version>3.5.1</version>
+           </dependency>
+           <!--mybatis-plus代码生成器引擎-->
+           <dependency>
+             <groupId>org.apache.velocity</groupId>
+             <artifactId>velocity-engine-core</artifactId>
+             <version>2.3</version>
+           </dependency>
+           <!--lombok简化代码-->
+           <dependency>
+             <groupId>org.projectlombok</groupId>
+             <artifactId>lombok</artifactId>
+             <optional>true</optional>
+             <version>1.18.20</version>
+           </dependency>
     </dependencies>
 
     <build>
@@ -70,6 +129,20 @@
                 </configuration>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <!-- xml放在java目录下-->
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+            <!--指定资源的位置（xml放在resources下，可以不用指定）-->
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
+
     </build>
 
 </project>
